adding serch by name and genre for artist
